# rust-web

./: .gitignore  Cargo.toml  LICENSE  README.md  mod.rs
controller/: controller_controller.rs  mod.rs
dto/: dto_dto.rs  mod.rs
entity/: entity_entity.rs  mod.rs
loco/: Cargo.toml
loco-web/: Cargo.toml
loco-web/assets/views/home/: hello.html
loco-web/assets/views/pages/: home.html  login.html
loco-web/config/: development.yaml  test.yaml
loco-web/data/products/: data.json
loco-web/examples/: playground.rs
loco-web/migration/src/: lib.rs  m20260224_182718_products.rs
loco-web/src/: app.rs
loco-web/src/controllers/: dashboard.rs  pages.rs
loco-web/src/data/: mod.rs  products.rs
loco-web/tests/models/: products.rs  users.rs
loco-web/tests/requests/: auth.rs  prepare_data.rs
loco/src/: lib.rs
loco/tests/requests/: home.rs
myapp/: Cargo.toml  schema_dump.json
myapp/config/: development.yaml  scheduler.yaml  test.yaml
myapp/frontend/: package-lock.json
myapp/src/: app.rs
myapp/src/tasks/: report.rs
myapp/tests/requests/: auth.rs
myapp/tests/tasks/: mod.rs  report.rs
service/: mod.rs  service_service.rs
src/: main.rs  middlewares.rs
static/: base.html
static/css/: base.css
static/js/: base.js
