[package]
name = "weboxide"
version = "0.1.0"
edition = "2024"

[dependencies]
# فریم ورک پروژه
axum = "0.8.8"

once_cell = "1.21.3"

# تبدیل فایل های JSON
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

 # پکیج مربوط به پردازش غیر همزمانی
tokio = { version = "1", features = ["full"] }

# برای middleware
tower = "0.5.3"
tower-http = "0.6.8"
